# bunner-qs

./: .gitignore  Cargo.toml  LICENSE.md  Makefile  OPTIMIZATIONS.md  PLAN.md  README.ko.md  README.md
.cargo-husky/hooks/: pre-commit  pre-push
benches/: bunner_qs_rs.rs  ecosystem_compare.rs  parse_stringify.rs  scenarios.rs  stringify_micro.rs
src/: arena.rs  buffer_pool.rs  encoding.rs  error.rs  lib.rs  nested.rs  options.rs  ordered_map.rs  parse.rs  pattern_catalog.rs  prelude.rs  qs.rs  query_types.rs  serde_bridge.rs  serde_support.rs  stringify.rs  util.rs  util_test.rs  utils.rs  value.rs
src/api/: errors.rs  mod.rs  options.rs  parse.rs  stringify.rs
src/config/: globals.rs  mod.rs  options.rs  options_test.rs
src/core/: buffer.rs  mod.rs  options.rs  ordered_map.rs  value.rs
src/memory/: buffer.rs  buffer_test.rs  mod.rs
src/model/: map.rs  mod.rs  value.rs  value_test.rs
src/nested/: container.rs  container_test.rs  insertion.rs  insertion_test.rs  key_path.rs  key_path_test.rs  mod.rs  pattern_state.rs  pattern_state_test.rs  segment.rs  segment_test.rs
src/parse/: arena.rs  mod.rs
src/parsing/: api.rs  api_test.rs  arena.rs  arena_test.rs  builder.rs  builder_test.rs  decoder.rs  decoder_test.rs  direct.rs  errors.rs  errors_test.rs  key_path.rs  key_path_test.rs  mod.rs  mod_test.rs  pair_decoder.rs  pair_decoder_test.rs  pair_inserter.rs  pair_inserter_test.rs  preflight.rs  preflight_test.rs  runtime.rs  state.rs  state_test.rs
src/serde/: mod.rs
src/serde_adapter/: arena.rs  arena_de.rs  arena_test.rs  de.rs  error.rs  errors.rs  errors_test.rs  from_map.rs  mod.rs  ser.rs  to_map.rs
src/serde_adapter/ser/: map.rs  (+8 more)
src/serde_impl/: arena_de.rs  de.rs  mod.rs  ser.rs
src/stringify/: api.rs  api_test.rs  encode.rs  encode_test.rs  errors.rs  mod.rs  mod_test.rs  runtime.rs  runtime_test.rs  validate.rs  validate_test.rs  walker.rs  walker_test.rs  writer.rs  writer_test.rs
tests/: concurrency.rs  empty-keys-cases.json  fuzzish.proptest-regressions  fuzzish.rs  hpp.rs  nested_structures.rs  options_limits.rs  parse.rs  parse_end_to_end.rs  parsing_arena.rs  parsing_builder.rs  qs_test.rs  serde.rs  serde_integration.rs  serde_roundtrip.rs  string_promotion.rs  stringify.rs  stringify_end_to_end.rs  utils.rs  value.rs
tests/common/: api.rs  arena_helpers.rs  arrays.rs  asserts.rs  json.rs  mod.rs  options.rs  parsing_helpers.rs  proptest_profiles.rs  serde_data.rs  serde_error_fixtures.rs  serde_helpers.rs  stringify_options.rs
tests/data/: query_allow.json  query_reject.json  query_roundtrip.json
tools/: generate_query_corpus.py
(+9 files in other folders)
