[package]
name = "bunner_qs"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
indexmap = "2.2"
thiserror = "1.0"
derive_builder = "0.20"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
percent-encoding = "2.3.2"

[dev-dependencies]
proptest = "1.4"
criterion = { version = "0.5", features = ["html_reports"] }
serde_qs = "0.12"

[dev-dependencies.cargo-husky]
version = "1"
default-features = false
features = ["user-hooks"]

[[bench]]
name = "parse_stringify"
harness = false

[[bench]]
name = "ecosystem_compare"
harness = false
