[package]
name = "bunner_qs"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
indexmap = "2.2"
thiserror = "1.0"
derive_builder = "0.20"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
percent-encoding = "2.3.2"
ahash = "0.8"
hashbrown = { version = "0.14", features = ["raw"] }
memchr = "2.7"
bumpalo = { version = "3.15", features = ["collections"] }
smallvec = "1.13"

[dev-dependencies]
proptest = "1.4"
criterion = { version = "0.5", features = ["html_reports"] }
serde_qs = "0.12"
assert_matches = "1.5"

[dev-dependencies.cargo-husky]
version = "1"
default-features = false
features = ["user-hooks"]

[[bench]]
name = "bunner_qs_rs"
harness = false

[[bench]]
name = "ecosystem_compare"
harness = false
