[package]
name = "bunner_qs_rs"
version = "0.1.0"
edition = "2024"
license = "LICENSE.md"
description = "Fast, secure, and configurable query-string parser and serializer for Rust"
repository = "https://github.com/parkrevil/bunner-qs-rs"
documentation = "https://github.com/parkrevil/bunner-qs-rs"
homepage = "https://github.com/parkrevil/bunner-qs-rs"
keywords = ["query", "qs", "form", "http", "web", "middleware"]
categories = ["web-programming", "network-programming"]
authors = ["parkrevil"]
readme = "README.md"

[dependencies]
indexmap = "2.11"
thiserror = "2"
derive_builder = "0.20"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
percent-encoding = "2.3.2"
ahash = "0.8"
hashbrown = "0.16"
memchr = "2.7"
bumpalo = { version = "3.19", features = ["collections"] }
smallvec = "1.15"

[dev-dependencies]
proptest = "1"
criterion = { version = "0.7", features = ["html_reports"] }
serde_qs = "0.15"
assert_matches = "1.5"

[dev-dependencies.cargo-husky]
version = "1"
default-features = false
features = ["user-hooks"]

[[bench]]
name = "bunner_qs_rs"
harness = false

[[bench]]
name = "ecosystem_compare"
harness = false
